--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,25 @@
   text-align: center;
 }
 
+.header {
+  margin-top: 100px;
+  margin-left: 500px;
+}
+.homebtn {
+  width: 200px;
+  height: 150px;
+}
+
+.explorebtn {
+  width: 200px;
+  height: 150px;
+}
+
+.profilebtn {
+  width: 200px;
+  height: 150px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
